<?xml version="1.0"?>
<package format="2">
  <name>lab08_package</name>
  <version>1.2.7</version>
  <description>
     Package for lab08 of MTRN4230
  </description>

  <author>Max Kelly</author>
  <maintainer email="max.kelly@unsw.edu.au">Max Kelly</maintainer>
  

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ur_e_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>ur5e_description</exec_depend>

  <depend>std_srvs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <depend>roscpp</depend>



  <export>
  </export>
</package>
