<?xml version="1.0"?>
<package format="2">
    <name>lab09_gazebo</name>
    <version>0.0.0</version>
    <description>The lab09_gazebo package</description>
    <license>BSD</license>

    <maintainer email="l.dennis@unsw.edu.au">Luke Dennis</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>

    <exec_depend>ur5e_epick_moveit_config</exec_depend>
    <exec_depend>ur_description</exec_depend>
    <exec_depend>ur_kinematics</exec_depend>

    <exec_depend>moveit_core</exec_depend>
    <exec_depend>moveit_ros_planning_interface</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    
    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
        <gazebo_ros gazebo_plugin_path="${prefix}/models" gazebo_media_path="${prefix}/models" />
    </export>
</package>
